[package]
name = "procedural-generation"
version = "1.0.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="procedural_generation"
crate-type = ["rlib"]

[dependencies]
rand = "0.7"
rand_xoshiro = "0.4"
nalgebra = "0.21"